[project]
name = "rutscout"
version = "1.0.0"
description = "Automatically evaluate Teltonika router SIMs, run speedtests per SIM, and select the fastest SIM as primary."
readme = "README.md"
authors = [
    { name = "Ben Evans", email = "ben@bluechimp.io" }
]
requires-python = ">=3.13"
keywords = ["router", "teltonika", "sim", "speedtest", "automation", "network"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]
dependencies = [
    "ponika>=0.5.0",
    "rich>=15.0.0",
    "speedtest-cli>=2.1.3",
]

[project.scripts]
rutscout = "rutscout:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"


